src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TYP004_2.py.snap
---
source: src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- kind:
    RuntimeImportInTypeCheckingBlock:
      full_name: datetime.date
  location:
    row: 4
    column: 25
  end_location:
    row: 4
    column: 29
  fix: ~
  parent: ~

