src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__typing-only-standard-library-import_TCH003.py.snap
---
source: src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- kind:
    TypingOnlyStandardLibraryImport:
      full_name: os
  location:
    row: 8
    column: 11
  end_location:
    row: 8
    column: 13
  fix: ~
  parent: ~

